--- a/web/index.html
+++ b/web/index.html
@@ -24,10 +24,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="portifolio">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
+  <link rel="icon" type="image/png" href="icons/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+
 
   <title>Portifólio</title>
   <link rel="manifest" href="manifest.json">
